examples/scanner/literals/fail/invalid_escape.axo
const bad = "invalid\xGG"
print(bad)
